infrastructure/apps/ntfy/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ntfy-gateway
  namespace: ntfy
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: notify.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: ntfy-tls
